# pytest_logger

./: pyproject.toml  requirements.txt
src/pytest_logger/: __init__.py  plugin.py
src/pytest_logger/logger/: logger.py
test/: test_hello.py
